<?xml version="1.0"?>
<package format="2">
	<name>xwiimote_controller</name>
	<version>2.0.0</version>
	<description>A ROS2 package to control Nintendo Wiimote using the new driver xwiimote.</description>
	<maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
	<license>GPLv2</license>
	<author email="ajtudela@gmail.com">Alberto Tudela</author>
	<buildtool_depend>ament_cmake_ros</buildtool_depend>
	<build_depend>rclcpp</build_depend>
	<build_depend>rclcpp_lifecycle</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<exec_depend>rclcpp</exec_depend>
	<exec_depend>rclcpp_lifecycle</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>std_srvs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
